Fixed footer0 and added vertical scrollbar to homepage dropdown

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -75,14 +75,20 @@ ul ul {
 
 .coursesList {
   padding: 0;
-  padding-bottom: 3%;
   width: 18vw;
   height: auto;
+  max-height: 73vh;
   width: 18.5vw;
+  overflow: auto;
+}
+
+.coursesListWrapper {
+  height: auto;
+  overflow-x: visible;
 }
 
 .coursesList > li > ul li > ul {
-  transition: max-height 1s;
+  transition: max-height 2s 1s;
   max-height: 0;
   overflow: hidden;
 }
